--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,19 @@
 :root {
-    --background-color: #ffffff;
+    --background-color: #ffffff; /* Fundo da container */
+    --dark-background-color: #b76e39; /* Cor para o fundo do body no modo escuro */
     --text-color: #D2691E;
     --box-color: #D2691E;
     --checked-color: #D2691E;
 }
 
 .dark-mode {
-    --background-color: #e0dfd;
-    --text-color: #954100;
-    --box-color: #954100;
-    --checked-color: #954100;
-}
-
-* {
-    box-sizing: border-box;
+    --background-color: #ffffff; /* Mantém a cor de fundo da container no modo escuro */
+    background-color: var(--dark-background-color); /* Altera o fundo do body */
+    color: var(--text-color);
 }
 
 body {
-    background-color: var(--background-color);
+    background-color: var(--background-color); /* Fundo do body padrão */
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -31,7 +27,7 @@ body {
     width: 100%;
     max-width: 800px;
     height: auto;
-    background-color: var(--background-color);
+    background-color: var(--background-color); /* Fundo da container */
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -40,6 +36,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 
 .header {
     display: flex;
