--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     color: var(--text-color);
 }
 
+h1 {
+    color: #D2691E;
+}
+
 body {
     background-color: var(--background-color);
     color: var(--text-color);
@@ -57,7 +61,7 @@ body {
 }
 
 .save-btn {
-    background-color: #007BFF;
+    background-color: #333;
     color: white;
     padding: 10px 20px;
     border: none;
