--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import '@shadcn/ui/dist/styles.css';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
 
 :root {
     --background-color: #ffffff;
@@ -23,7 +23,7 @@ body {
     background-image: url('img/background-fundo.jpg');
     background-color: var(--background-color);
     color: var(--text-color);
-    font-family: Arial, sans-serif;
+    font-family: Noto Sans, Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,12 +62,67 @@ body {
 }
 
 .save-btn {
-    background-color: #333;
+    padding: 1.2rem 2.5rem;
+    border: 2px solid #ffffff;
     color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    font-size: 0.6875rem;
+    font-weight: 700;
+    letter-spacing: 0.3rem;
+    position: relative;
+    background-color: #333;
+    transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225);
+    overflow: hidden;
+}
+
+.save-btn::before {
+    content: '';
+    height: 1px;
+    width: 60px;
+    background-color:#D2691E;;
+    position: absolute;
+    margin-top: 6px;
+    right: -35px;
+    transition: all 1000ms cubic-bezier(0.890, -0.170, 0.140, 1.225);
+}
+
+.save-btn:hover::before {
+    width: 130%;
+}
+
+.save-btn .top, .save-btn .bottom {
+    position: relative;
+    height: 6px;
+    overflow: hidden;
+    transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040);
+    transition-delay: 0.35s;
+}
+
+.save-btn .top {
+    top: 0;
+}
+
+.save-btn .bottom {
+    bottom: 0;
+}
+
+.save-btn .bottom span {
+    top: -6px;
+    position: absolute;
+    left: 0;
+}
+
+.save-btn:hover .top {
+    top: -5px;
+    transition-delay: 0.35s;
+}
+
+.save-btn:hover .bottom {
+    bottom: -5px;
+    transition-delay: 0.35s;
+}
+
+.save-btn:hover, .save-btn:focus, .save-btn:active {
+    margin-left: 10px;
 }
 
 .checklist .item {
