--- a/style.css
+++ b/style.css
@@ -15,21 +15,17 @@
     color: var(--text-color);
 }
 
-h1 {
-    color: #D2691E;
-}
-
 body {
     background-image: url('img/background-fundo.jpg');
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: Noto Sans, Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
-    transition: background-color 0.3s, color 0.3s;
+    display: flex; /* Usar flexbox */
+    flex-direction: column; /* Alinhamento vertical */
+    justify-content: center; /* Centraliza verticalmente */
+    align-items: center; /* Centraliza horizontalmente */
+    min-height: 100vh; /* Mantém a altura mínima da tela */
+    margin: 0; /* Remove margens */
 }
 
 .container {
@@ -41,6 +37,7 @@ body {
     border: 2px solid var(--text-color);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s, color 0.3s;
+    flex-grow: 1; /* Faz o contêiner ocupar todo o espaço disponível */
 }
 
 .header {
@@ -48,6 +45,54 @@ body {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
+}
+
+footer {
+    font-family: Noto Sans;
+    background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com leve transparência */
+    color: var(--text-color); /* Cor do texto */
+    padding: 20px 0; /* Preenchimento em cima e embaixo */
+    text-align: center; /* Centraliza o texto */
+    display: flex; /* Usando flexbox para layout */
+    flex-direction: column; /* Alinhando os itens em coluna */
+    align-items: center; /* Centraliza os itens */
+    width: 100%; /* Faz o footer ocupar 100% da largura */
+    position: relative; /* Opcional, dependendo do layout */
+    bottom: 0; /* Se você quiser que ele fique fixo na parte inferior */
+}
+
+
+
+.footer__contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 0.9rem;
+}
+
+.footer__contact span {
+    margin-bottom: 5px;
+}
+
+.footer__contact span:last-child {
+    margin-bottom: 0;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+
+.footer__copyright {
+    font-size: 0.8rem;
+    color: var(--text-color);
+    margin-top: 10px;
 }
 
 /* Estilo do botão switch */
@@ -230,6 +275,31 @@ body.dark-mode .task-input {
     color: white; /* Cor do texto na caixa de texto no modo escuro */
 }
 
+/* Responsividade para o footer */
+@media (max-width: 768px) {
+    .footer__contact {
+        font-size: 0.8rem;
+    }
+
+    ul {
+        gap: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer__contact {
+        font-size: 0.75rem;
+    }
+
+    ul {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .footer__copyright {
+        font-size: 0.7rem;
+    }
+}
 
 /* Responsividade */
 @media (max-width: 768px) {
