--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: Noto Sans, Arial, sans-serif;
-    display: flex; /* Usar flexbox */
-    flex-direction: column; /* Alinhamento vertical */
-    justify-content: center; /* Centraliza verticalmente */
-    align-items: center; /* Centraliza horizontalmente */
-    min-height: 100vh; /* Mantém a altura mínima da tela */
-    margin: 0; /* Remove margens */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
 }
 
 .container {
@@ -37,7 +37,7 @@ body {
     border: 2px solid var(--text-color);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s, color 0.3s;
-    flex-grow: 1; /* Faz o contêiner ocupar todo o espaço disponível */
+    flex-grow: 1;
 }
 
 .header {
@@ -49,19 +49,15 @@ body {
 
 footer {
     font-family: Noto Sans;
-    background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com leve transparência */
-    color: var(--text-color); /* Cor do texto */
-    padding: 20px 0; /* Preenchimento em cima e embaixo */
-    text-align: center; /* Centraliza o texto */
-    display: flex; /* Usando flexbox para layout */
-    flex-direction: column; /* Alinhando os itens em coluna */
-    align-items: center; /* Centraliza os itens */
-    width: 100%; /* Faz o footer ocupar 100% da largura */
-    position: relative; /* Opcional, dependendo do layout */
-    bottom: 0; /* Se você quiser que ele fique fixo na parte inferior */
+    background-color: rgba(255, 255, 255, 0.9);
+    color: var(--text-color);
+    padding: 20px 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
-
-
 
 .footer__contact {
     display: flex;
@@ -70,14 +66,6 @@ footer {
     text-align: center;
     margin-bottom: 20px;
     font-size: 0.9rem;
-}
-
-.footer__contact span {
-    margin-bottom: 5px;
-}
-
-.footer__contact span:last-child {
-    margin-bottom: 0;
 }
 
 ul {
@@ -95,7 +83,6 @@ ul {
     margin-top: 10px;
 }
 
-/* Estilo do botão switch */
 .toggle-btn {
     display: flex;
     align-items: center;
@@ -104,12 +91,12 @@ ul {
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px; /* Largura do botão */
-    height: 34px; /* Altura do botão */
+    width: 60px;
+    height: 34px;
 }
 
 .switch input {
-    opacity: 0; /* Oculta o checkbox */
+    opacity: 0;
     width: 0;
     height: 0;
 }
@@ -121,29 +108,29 @@ ul {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc; /* Cor de fundo do botão */
-    transition: .4s; /* Transição suave */
-    border-radius: 34px; /* Bordas arredondadas */
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
 }
 
 .slider:before {
     position: absolute;
     content: "";
-    height: 26px; /* Altura do círculo */
-    width: 26px; /* Largura do círculo */
-    left: 4px; /* Espaçamento à esquerda */
-    bottom: 4px; /* Espaçamento embaixo */
-    background-color: white; /* Cor do círculo */
-    transition: .4s; /* Transição suave */
-    border-radius: 50%; /* Círculo perfeito */
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
 }
 
 input:checked + .slider {
-    background-color: #D2691E; /* Cor do botão quando ativo */
+    background-color: #D2691E;
 }
 
 input:checked + .slider:before {
-    transform: translateX(26px); /* Move o círculo para a direita */
+    transform: translateX(26px);
 }
 
 .save-btn {
@@ -174,52 +161,15 @@ input:checked + .slider:before {
     width: 130%;
 }
 
-.save-btn .top, .save-btn .bottom {
-    position: relative;
-    height: 6px;
-    overflow: hidden;
-    transition: all 300ms cubic-bezier(1.000, -0.055, 0.025, 1.040);
-    transition-delay: 0.35s;
-}
-
-.save-btn .top {
-    top: 0;
-}
-
-.save-btn .bottom {
-    bottom: 0;
-}
-
-.save-btn .bottom span {
-    top: -6px;
-    position: absolute;
-    left: 0;
-}
-
-.save-btn:hover .top {
-    top: -5px;
-    transition-delay: 0.35s;
-}
-
-.save-btn:hover .bottom {
-    bottom: -5px;
-    transition-delay: 0.35s;
-}
-
-.save-btn:hover, .save-btn:focus, .save-btn:active {
-    margin-left: 10px;
-}
-
 .checklist .item {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-/* Estilo personalizado para o checkbox */
 .checklist input[type="checkbox"] {
-    appearance: none; /* Remove o estilo padrão */
-    -webkit-appearance: none; /* Compatibilidade com navegadores Webkit */
+    appearance: none;
+    -webkit-appearance: none;
     width: 20px;
     height: 20px;
     margin-right: 10px;
@@ -229,13 +179,11 @@ input:checked + .slider:before {
     transition: background-color 0.3s;
 }
 
-/* Estilo quando o checkbox está marcado */
 .checklist input[type="checkbox"]:checked {
     background-color: var(--checked-color);
     border-color: var(--checked-color);
 }
 
-/* Ícone de seleção para o checkbox marcado */
 .checklist input[type="checkbox"]:checked::after {
     content: "✔";
     color: white;
@@ -255,7 +203,6 @@ input:checked + .slider:before {
     transition: border-color 0.3s;
 }
 
-/* Tema escuro */
 body.dark-mode .container {
     background-color: var(--dark-background-color);
     color: var(--text-color);
@@ -271,11 +218,10 @@ body.dark-mode .checklist input[type="checkbox"] {
 
 body.dark-mode .task-input {
     border-bottom-color: var(--checked-color);
-    background-color: #555; /* Fundo da caixa de texto no modo escuro */
-    color: white; /* Cor do texto na caixa de texto no modo escuro */
+    background-color: #555;
+    color: white;
 }
 
-/* Responsividade para o footer */
 @media (max-width: 768px) {
     .footer__contact {
         font-size: 0.8rem;
@@ -301,7 +247,6 @@ body.dark-mode .task-input {
     }
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     .container {
         padding: 15px;
@@ -337,17 +282,32 @@ body.dark-mode .task-input {
 
 .add-btn {
     padding: 10px;
-    font-size: 24px; /* Tamanho do texto */
-    color: #fff; /* Cor do texto */
-    background-color: #D2691E; /* Cor do fundo */
-    border: none; /* Remove a borda padrão */
-    border-radius: 5px; /* Bordas arredondadas */
-    cursor: pointer; /* Muda o cursor ao passar o mouse */
-    margin-top: 10px; /* Espaçamento acima do botão */
+    font-size: 24px;
+    color: #fff;
+    background-color: #D2691E;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 .add-btn:hover {
-    background-color: #b45d15; /* Cor do fundo ao passar o mouse */
+    background-color: #b45d15;
+}
+
+.remove-btn {
+    padding: 6px; /* Ajuste o valor do padding aqui */
+    font-size: 16px; /* Ajuste o tamanho da fonte se necessário */
+    color: #fff;
+    background-color: #D2691E;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 10px; /* Adicionando uma margem para separar do botão "Add" */
+}
+
+.remove-btn:hover {
+    background-color: #b45d15;
 }
 
 @media (max-width: 480px) {
@@ -370,3 +330,4 @@ body.dark-mode .task-input {
         padding: 6px;
     }
 }
+
